Se agrego un nueva variable imagen_prod en el Modelo/Producto y en el formulario-registro-producto, tambien se creo un nuevo componente llamado formulario-grupo-imagen-producto en la carpeta InputFieldGroup, este componente seria un campo del formulario-registro-producto

--- a/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Administrador/Producto/Registro/formulario-registro-producto/formulario-registro-producto.component.html
+++ b/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Administrador/Producto/Registro/formulario-registro-producto/formulario-registro-producto.component.html
@@ -12,6 +12,8 @@
         </app-formulario-grupo-nit-prov-producto>
         <app-formulario-grupo-logo-producto [registroForm]="registroForm" [logo_prod]="logo_prod">
         </app-formulario-grupo-logo-producto>
+        <app-formulario-grupo-imagen-producto [registroForm]="registroForm" [imagen_prod]="imagen_prod">
+        </app-formulario-grupo-imagen-producto>
         <app-formulario-grupo-descripcion-producto [registroForm]="registroForm" [descripcion_prod]="descripcion_prod">
         </app-formulario-grupo-descripcion-producto>
         <app-formulario-grupo-beneficios-producto [registroForm]="registroForm" [beneficios_prod]="beneficios_prod">
@@ -36,7 +38,9 @@
         </app-formulario-grupo-terreno-producto>
         <app-formulario-grupo-tipo-producto [registroForm]="registroForm" [tipo_prod]="tipo_prod">
         </app-formulario-grupo-tipo-producto>
-        <app-formulario-grupo-vehiculo-producto [registroForm]="registroForm" [vehiculo]="vehiculo"></app-formulario-grupo-vehiculo-producto>
+        <app-formulario-grupo-vehiculo-producto [registroForm]="registroForm" [vehiculo]="vehiculo">
+        </app-formulario-grupo-vehiculo-producto>
+
         <!--<app-formulario-grupo-apellido [registroForm]="registroForm" [apellido]="apellido"></app-formulario-grupo-apellido>
         <app-formulario-grupo-cedula [registroForm]="registroForm" [cedula]="cedula"></app-formulario-grupo-cedula>
         <app-formulario-grupo-telefono [registroForm]="registroForm" [telefono]="telefono"></app-formulario-grupo-telefono>
