Se agrego una nueva carpeta Descripcion y componente en la Tienda llamada descripcion-prod, en donde se actualizaron cada una de las marcas y se agragaron algunos estilos

--- a/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Tienda/TiendaProductos/Goodyear/goodyear/goodyear.component.html
+++ b/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Tienda/TiendaProductos/Goodyear/goodyear/goodyear.component.html
@@ -1,14 +1,14 @@
-<div class="grupo card">
+<div class="grupo card" [routerLink]="" (click)="descripcionProd()">
     <div class="marca-producto-goodyear">
-        <img class="card-img-goodyear" src="../../../../../assets/img/Tienda/Logos/GOODYEAR.png"
+        <img class="card-img-goodyear" src={{logo}}
             alt="Card image cap"><br>
-        <span class="span">RHS II</span><br>
-        <span class="span1">315/80R22.5</span>
+        <span class="span">{{nombre}}</span><br>
+        <span class="span1">{{ancho}}{{perfil}}{{rin}}</span>
     </div>
-    <img class="card-img-top" src="../../../../../assets/img/Tienda/Imagen_productos/Goodyear/LLANTA_GOODYEAR.png" alt="Card image cap">
+    <img class="card-img-top" src={{producto}} alt="Card image cap">
     <br>
     <div class="precio-unidad">
         <span class="unity-price">Precio unidad</span><br>
-        <span class="unity-price1">$1.879.000</span><br>
+        <span class="unity-price1">{{precio}}</span><br>
     </div>
 </div>
