--- a/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Tienda/TiendaProductos/Laufenn/laufenn/laufenn.component.html
+++ b/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Tienda/TiendaProductos/Laufenn/laufenn/laufenn.component.html
@@ -1,13 +1,13 @@
-<div class="grupo card">
+<div class="grupo card" [routerLink]="" (click)="descripcionProd()">
     <div class="marca-producto-laufenn">
-        <img class="card-img-laufenn" src="../../../../../assets/img/Tienda/Logos/LAUFENN.png" alt="Card image cap"><br>
-        <span class="span">LF21</span><br>
-        <span class="span1">9.5R17.5</span>
+        <img class="card-img-laufenn" src={{logo}} alt="Card image cap"><br>
+        <span class="span">{{nombre}}</span><br>
+        <span class="span1">{{ancho}}{{perfil}}{{rin}}</span>
     </div>
-    <img class="card-img-top" src="../../../../../assets/img/Tienda/Imagen_productos/Laufenn/LLANTA_LAUFENN.png" alt="Card image cap">
+    <img class="card-img-top" src={{producto}} alt="Card image cap">
     <br>
     <div class="precio-unidad">
         <span class="unity-price">Precio unidad</span><br>
-        <span class="unity-price1">$612.000</span><br>
+        <span class="unity-price1">{{precio}}</span><br>
     </div>
 </div>
