--- a/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/assets/css/estilos.css
+++ b/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/assets/css/estilos.css
@@ -11,12 +11,12 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-th {
+.full-width-table th {
     font-size: 12px;
     width: 100%;
 }
 
-td {
+.full-width-table td {
     width: 200%;
 }
 
@@ -26,6 +26,12 @@ td {
     align-content: center !important;
     width: 80% !important;
     font-size: 10 !important;
+}
+.tableTotalCarrito{
+    width: 13%;
+}
+.tableTotalCarrito th {
+    width: 100px;
 }
 
 .hr {
@@ -297,9 +303,30 @@ td {
     border: none;
 }
 
+.class-button-finalizar-compra {
+    font-family: 'roboto';
+    color: #fff;
+    background-color: rgba(95, 138, 180);
+    margin: 10% 20%;
+    width: 60%;
+    height: 60px;
+    font-size: 1.2vw;
+    cursor: pointer;
+    border: none;
+}
+
+
+
 .formulario_input-error {
     font-size: 13px;
     margin-top: 1rem !important;
+    position: absolute;
+    display: block;
+}
+
+.formulario_input-error-descripcion{
+    font-size: 1.2vw;
+    margin-top: 0rem !important;
     position: absolute;
     display: block;
 }
@@ -314,6 +341,17 @@ td {
     right: 6px;
     /*margin-left: 45.2rem;*/
     bottom: 6.3px;
+    z-index: 100;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.formulario_validacion-estado-descripcion {
+    position: absolute;
+    font-size: 2vw;
+    left: 270px;
+    /*margin-left: 45.2rem;*/
+    bottom: 40px;
     z-index: 100;
     cursor: pointer;
     opacity: 0;
@@ -376,7 +414,7 @@ td {
     display: block;
 }
 
-.grupo-correcto .formulario_validacion-estado {
+.grupo-correcto .formulario_validacion-estado,.grupo-correcto .formulario_validacion-estado-descripcion {
     color: #1ed12d;
     opacity: 1;
 }
@@ -385,7 +423,7 @@ td {
     color: #bb2929 !important;
 }
 
-.grupo-incorrecto .formulario_validacion-estado {
+.grupo-incorrecto .formulario_validacion-estado,.formulario_validacion-estado-descripcion {
     color: #bb2929;
     opacity: 1;
 }
@@ -691,6 +729,12 @@ td {
     left: 20px;
 }
 
+.card-carrito {
+    cursor: default !important;
+    border-radius: 20px;
+    left: 20px;
+}
+
 .marca-producto-steelmark, .marca-producto-laufenn {
     position: static;
     padding: 5px;
@@ -728,7 +772,6 @@ td {
 }
 
 .imagen_d {
-    background-color: greenyellow;
     width: 400px;
     height: 400px;
 }
@@ -739,9 +782,24 @@ td {
     margin: 3% 29%;
 }
 
+.div-carrito {
+    /*background-color: greenyellow;*/
+    width: 90%;
+    height: 250px;
+    margin: 3% 5%;
+    border: 2.5px solid;
+    border-color: rgba(43, 43, 43, 0.6);
+}
+
 .div-descripcion p {
     margin: 2%;
     text-align: justify;
+}
+
+.div-carrito p {
+    margin: 8% 3%;
+    font-size: 1.3vw;
+    font-weight: bold;
 }
 
 .card-img-steelmark {
@@ -754,6 +812,11 @@ td {
     width: 11vw;
     margin: 20px;
     text-align: center;
+}
+.card-img-steelmark2{
+    height: auto;
+    width: 7.5vw;
+    margin: 10px;
 }
 
 .card-img-goodyear {
@@ -828,7 +891,20 @@ td {
     float: right;
 }
 
+.section-carrito {
+    /*background-color: darkorange;*/
+    width: 28%;
+    float: right;
+}
+
 aside {
     width: 22%;
     float: left;
+}
+
+#aside-carrito {
+    /*background-color: firebrick;*/
+    width: 70%;
+    float: left;
+    margin: 3% 1%;
 }
