Al componente carrito de compra se agregaron dos metodos los cuales son actualizarCantidadExistente y finalizarCompra

--- a/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Carrito/carrito/carrito.component.html
+++ b/Proyecto-de-Rencauche-de-Llantas-con-Angular/src/app/components/Carrito/carrito/carrito.component.html
@@ -46,10 +46,9 @@
                             </tr>
                         </thead>
                     </table>
-                    <button class="class-button-finalizar-compra" type="submit">Finalizar Compra</button>
+                    <button class="class-button-finalizar-compra" type="submit" (click)="finalizarCompra()">Finalizar Compra</button>
                 </div>
             </article>
         </section>
     </div>
 </div>
-{{ocultar}}
